use latest manifold